--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,7 @@ services:
     ports:
       - "8080:8080"
     restart: unless-stopped
+    volumes:
+      - ./:/code
     env_file:
       - ./backend/.env
