--- a/turtl.bio/package.json
+++ b/turtl.bio/package.json
@@ -23,6 +23,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-resizable-panels": "^3.0.6",
